# TripMind

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
tests/: conftest.py  test_critic.py  test_intent.py  test_llm_runtime.py  test_planner_compaction.py  test_runtime.py  test_travel_data.py
tripmind/: __init__.py  __main__.py  api.py  checkpoint.py  cli.py  llm.py  mcp_client.py  mcp_server.py  memory.py  renderer.py  runtime.py  schemas.py  tools.py  travel_data.py
tripmind/agents/: __init__.py  critic.py  intent.py  planner.py
