[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripmind"
version = "0.1.0"
description = "A small, testable travel-planning agent demo with structured handoffs and mock tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "mcp>=1.27",
    "openai>=1.60",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
tripmind = "tripmind.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["tripmind"]
